# kafka-connectors-PoC

./: README.md  Taskfile.yaml  docker-bake.hcl  docker-compose.yml
elasticsearch/: README.md  Taskfile.yaml  docker-compose.yml  elasticsearch-include.yaml  kafka-include.yaml  opensearch-include.yaml
elasticsearch/logstash-elasticsearch/: docker-compose.yaml  logstash.conf
elasticsearch/logstash-kafka/: docker-compose.yaml  logstash.conf  logstash.polling.conf
lib/kafka-connect/: Dockerfile
lib/py-seed/: Dockerfile  pyproject.toml
lib/py-seed/src/seed/: main.py  util.py
mongo/: .env.example  README.md  Taskfile.yaml  docker-bake.hcl  docker-compose.yml  kafka-include.yaml
